force-app/main/default/objects/Expense_Payment_Request__c.object
<CustomObject>
    <description>Payment request for Property Management expenses.</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>BLANKVALUE(Contact_Name__r.Account.Name, Contact_Name__r.Account.Parent.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessor_Parcel_Numbers__c</fullName>
        <inlineHelpText>Please delete all the APN&apos;s that are not related to this expense payment.</inlineHelpText>
        <label>Assessor Parcel Number(s)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The contact (contractor/vendor) must first be entered as a contact in the &quot;Contacts&quot; tab in order to use the look up feature. If the &quot;Contacts&quot; tab is not visible, select the + next to the &quot;Reports&quot; tab and select &quot;Customize My Tabs.&quot;</inlineHelpText>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Expense Payment Requests</relationshipLabel>
        <relationshipName>Expense_Payment_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Director_of_Conservation_Programs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Director of Conservation Programs</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Expense_Payment_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Director_of_Finance_Operations__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Director of Finance &amp; Operations</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Expense_Payment_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Director_of_Real_Estate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>XDepDirector of Conservation Investments</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Expense_Payment_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Finance_Grants__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance/Grants</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Expense_Payment_Requests3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Financial_Account_Number__c</fullName>
        <inlineHelpText>Select the Financial Account Number that the expense should be posted to .</inlineHelpText>
        <label>Financial Account Number</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Financial_Account_Number</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Installments__c</fullName>
        <label>Installments</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>First</fullName>
                </value>
                <value>
                    <fullName>Second</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <inlineHelpText>For Property Taxes, enter today’s date.</inlineHelpText>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <inlineHelpText>Enter the invoice number. If paying more than one invoice, include all invoice numbers that relate to this payment. Not required for Property Taxes.</inlineHelpText>
        <label>Invoice Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_Payment_Amount__c</fullName>
        <inlineHelpText>Please include the total invoice amount.  For property taxes, batch the total by installment amount and include all APN&apos;s related to the property.</inlineHelpText>
        <label>Invoice Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Legal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Expense_Payment_Requests4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lock_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this checkbox is checked, the “Admin Override” approval process is launched. The approval process locks the record and unchecks the ‘Lock Record’ checkbox (so that it can easily be locked again), but does not change the status. This field is only visible to Administrators.</description>
        <inlineHelpText>Admin only field. Locks the record without changing the status. This box will not stay checked after the process runs, so if you need to re-lock the record again at a later date, you can.</inlineHelpText>
        <label>Lock Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Operations__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operations</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected user is not an Operations Manager. Please consult with your regional Operations Manager on whom to select.</errorMessage>
            <filterItems>
                <field>User.ProfileId</field>
                <operation>equals</operation>
                <value>00ea0000001p0phAAA</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Id</field>
                <operation>equals</operation>
                <value>00e30000001ookuAAA</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Expense_Payment_Requests5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please select the name of the &quot;Other&quot; if an additional person who does not fit the following titles is required to review the contract.</inlineHelpText>
        <label>Other</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Expense_Payment_Requests6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Request_Description__c</fullName>
        <label>Payment Request Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Request_Router__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Request Router</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Expense_Payment_Requests7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Request_Status__c</fullName>
        <label>Payment Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>In Approval Process</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Director_Program_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Director/Program Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Expense_Payment_Requests8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Management_Expense__c</fullName>
        <label>Property Management Expense</label>
        <referenceTo>Expense_Income__c</referenceTo>
        <relationshipLabel>Expense Payment Requests</relationshipLabel>
        <relationshipName>Expense_Payment_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Property_Management_Unit_Name__c</fullName>
        <formula>Property_Management_Expense__r.Property_Managment_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Management Unit Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Re_Lock_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to schedule the record for re-locking after a user has requested that the record be unlocked. It will automatically re-lock itself after 5 days.</inlineHelpText>
        <label>Re-Lock Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Regional_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Expense_Payment_Requests9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regional_Managing_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Managing Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Expense_Payment_RequestsV2j9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Science__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Science</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Expense_Payment_RequestsV2ji</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Senior_Project_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Senior Project Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Expense_Payment_RequestsV2jx</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Special_Instructions__c</fullName>
        <label>Special Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>State_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Expense_Payment_RequestsV2kb</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unique_Identifier__c</fullName>
        <formula>Property_Management_Expense__r.Property_Managment_Name__r.PROPERTY__c &amp; &quot;-&quot; &amp;Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1_Activity__c</fullName>
        <inlineHelpText>Enter 6 digit activity code</inlineHelpText>
        <label>1) Activity</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1_Activity_associated_with_payment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if there is an activity code associated with this payment project/award id.</inlineHelpText>
        <label>1) Activity associated with payment?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1_Amount_Allocated__c</fullName>
        <inlineHelpText>Amount to be charged to this project/award id. Total must equal invoice amount.</inlineHelpText>
        <label>1) Amount Allocated</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X1_Budget_Center_Name_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>XDeprecat1.) Budget Center Name &amp; Number</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>The cost center you have searched for is no longer active or you have submitted an invalid entry. Please consult with your Finance or Operations department for questions.</errorMessage>
            <filterItems>
                <field>Budget_Center_Names_Numbers__c.Status__c</field>
                <operation>notContain</operation>
                <value>Inactive</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Budget_Center_Names_Numbers__c</referenceTo>
        <relationshipLabel>Expense Payment Requests</relationshipLabel>
        <relationshipName>Expense_Payment_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X1_Project_Award_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Enter an active project/award id to be associated with this payment.</inlineHelpText>
        <label>1) Project/Award ID</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Project_IDs__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <infoMessage>Please select and active Project ID.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Project_IDs__c</referenceTo>
        <relationshipLabel>Expense Payment Requests</relationshipLabel>
        <relationshipName>Expense_Payment_Requests</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X2_Activity__c</fullName>
        <inlineHelpText>Enter 6 digit activity code</inlineHelpText>
        <label>2) Activity</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2_Activity_associated_with_payment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if there is an activity associated with this payment and project/award id.</inlineHelpText>
        <label>2) Activity associated with payment?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2_Amount_Allocated__c</fullName>
        <inlineHelpText>Enter amount to be charged to this project/award ID</inlineHelpText>
        <label>2) Amount Allocated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2_Budget_Center_Name_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>XDeprecat2.) Budget Center Name &amp; Number</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>The cost center you have searched for is no longer active or you have submitted an invalid entry. Please consult with your Finance or Operations department for questions.</errorMessage>
            <filterItems>
                <field>Budget_Center_Names_Numbers__c.Status__c</field>
                <operation>notContain</operation>
                <value>Inactive</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Budget_Center_Names_Numbers__c</referenceTo>
        <relationshipLabel>Expense Payment Requests (2.) Budget Center Name &amp; Number)</relationshipLabel>
        <relationshipName>Expense_Payment_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X2_Project_Award_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please select an active project id.</inlineHelpText>
        <label>2) Project/Award ID</label>
        <referenceTo>Project_IDs__c</referenceTo>
        <relationshipLabel>Expense Payment Requests (2) Project/Award ID)</relationshipLabel>
        <relationshipName>Expense_Payment_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X3_Activity_Associated_with_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if there is an activity code associated with this payment project/award id.</inlineHelpText>
        <label>3) Activity Associated with Payment?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X3_Activity__c</fullName>
        <inlineHelpText>Enter 6 digit activity code</inlineHelpText>
        <label>3) Activity</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3_Amount_Allocated__c</fullName>
        <inlineHelpText>Enter amount to be charged to this project/award id. Total of all 3 amount allocated fields must equal invoice amount.</inlineHelpText>
        <label>3) Amount Allocated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X3_Budget_Center_Name_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>XDeprecat3.) Budget Center Name &amp; Number</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>The cost center you have searched for is no longer active or you have submitted an invalid entry. Please consult with your Finance or Operations department for questions.</errorMessage>
            <filterItems>
                <field>Budget_Center_Names_Numbers__c.Status__c</field>
                <operation>notContain</operation>
                <value>Inactive</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Budget_Center_Names_Numbers__c</referenceTo>
        <relationshipLabel>Expense Payment Requests (3.) Budget Center Name &amp; Number)</relationshipLabel>
        <relationshipName>Expense_Payment_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X3_Project_Award_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please select an active project id.</inlineHelpText>
        <label>3) Project/Award ID</label>
        <referenceTo>Project_IDs__c</referenceTo>
        <relationshipLabel>Expense Payment Requests (3) Project/Award ID)</relationshipLabel>
        <relationshipName>Expense_Payment_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Expense Payment Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Expense Payment Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Payment Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Payment_Creator_Not_Equal_to_Approver</fullName>
        <active>true</active>
        <description>The &quot;Operations&quot; reviewer/approver must not be the same as the &quot;Payment Request Router&quot;. Please route the payment request to the appropriate Operations staff person.</description>
        <errorConditionFormula>Payment_Request_Router__c  =  Operations__c</errorConditionFormula>
        <errorMessage>The &quot;Operations&quot; reviewer/approver must not be the same as the &quot;Payment Request Router&quot;. Please route the payment request to the appropriate Operations staff person.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Payment_greater_than_expense_balance</fullName>
        <active>true</active>
        <description>Check if requested payment amount exceeds the balance remaining on the expense so that the balance doesn&apos;t go negative.</description>
        <errorConditionFormula>AND(
(Invoice_Payment_Amount__c  &gt; Property_Management_Expense__r.Balance_Remaining__c) ,
 ISPICKVAL(Payment_Request_Status__c , &quot;Draft&quot;))</errorConditionFormula>
        <errorDisplayField>Invoice_Payment_Amount__c</errorDisplayField>
        <errorMessage>Payment amount cannot exceed the balance remaining on the parent expense.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Total_allocated_not_equal_invoice_amount</fullName>
        <active>true</active>
        <description>The total of all 3 amount allocated fields should equal the total invoice amount.</description>
        <errorConditionFormula>( NULLVALUE(X1_Amount_Allocated__c,0) + NULLVALUE(X2_Amount_Allocated__c,0) + NULLVALUE(X3_Amount_Allocated__c,0) ) &lt;&gt;  Invoice_Payment_Amount__c</errorConditionFormula>
        <errorMessage>The sum of all 3 amount allocated fields must equal the Invoice Payment Amount</errorMessage>
    </validationRules>
</CustomObject>